--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,21 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--        mybatis-puls-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>2.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
+
+
 
     </dependencies>
 
